platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_122.platter
start(){
        piece of x 10;
}